feat(dto_docs): add docs for v2 endpoint and change the body to expect json
