# src/controllers/api.controller.ts
@@ -1,16 +1,15 @@
-import path from "node:path";
-import { Request, Response, NextFunction } from "express";
-import type { Image, Edge, Node } from "@prisma/client";
+import type { Edge, Image, Node } from "@prisma/client";
+import { NextFunction, Request, Response } from "express";
 import createError from "http-errors";
+import path from "node:path";
 import { ulid } from "ulid";
 
 import { prisma } from "../db/prisma";
-import { passToExpressErrorHandler, turnFalsyPropsToUndefined, poormansNormalizer } from "../utils";
+import { passToExpressErrorHandler, poormansNormalizer, turnFalsyPropsToUndefined } from "../utils";
 
 import { ClaimDao, NodeDao, Report } from "../dao/api.dao";
 import { ProtectedMulterRequest } from "../middlewares/upload/multer.upload";
-import { CreateClaimV2Dto, validateImages } from "../middlewares/validators/claim.validator";
-import { parseImagesFromClaimDto } from "../utils/images";
+import { CreateClaimV2Dto, ImageDto } from "../middlewares/validators/claim.validator";
 import { getS3SignedUrl, getS3SignedUrlIfExisted, uploadImageToS3 } from "../utils/aws-s3";
 
 const claimDao = new ClaimDao();
@@ -44,37 +43,61 @@ export async function createClaimV2(req: Request, res: Response, next: NextFunct
   const _req = req as ProtectedMulterRequest;
   const { userId } = _req;
 
-  const dto = _req.body as CreateClaimV2Dto;
+  const {
+    files: { dto: dtoRequestBody, images: imagesRequestBody },
+  } = _req;
+
+  const body = JSON.parse(dtoRequestBody[0].buffer.toString("utf-8"));
+
+  const { success, data: dto, error } = CreateClaimV2Dto.safeParse(body);
+  if (!success) {
+    return next({ data: error.errors, statusCode: 422 });
+  }
 
   try {
-    if (!validateImages(_req.files, dto)) {
-      throw new createError.UnprocessableEntity("invalid images metadata");
+    if (imagesRequestBody.length !== dto.images.length) {
+      throw new createError.UnprocessableEntity("Invalid images metadata");
     }
 
     const claim = await claimDao.createClaimV2(userId, dto);
     const claimData = await claimDao.createClaimData(claim.id, dto.name);
 
-    const awsImages = await Promise.all(
-      _req.files.map(async (f) => {
-        const filename = `${ulid()}${path.extname(f.originalname)}`;
-        await uploadImageToS3(filename, f);
-        return { filename };
-      }),
-    );
+    let awsImages: { filename: string }[];
 
-    const images = parseImagesFromClaimDto(
-      dto,
-      awsImages.map((x) => x.filename),
-    );
+    try {
+      awsImages = await Promise.all(
+        imagesRequestBody.map(async (f) => {
+          const filename = `${ulid()}${path.extname(f.originalname)}`;
+          await uploadImageToS3(filename, f);
+          return { filename };
+        }),
+      );
+    } catch (e) {
+      return passToExpressErrorHandler(
+        {
+          ...(e as Error),
+          message: "Error uploading the images",
+          statusCode: 500,
+        },
+        next,
+      );
+    }
 
-    const createdImages = await claimDao.createImagesV2(claim.id, userId, images);
+    const images = dto.images.map((x, i) => ({
+      ...x,
+      url: awsImages[i].filename,
+    })) as ImageDto[];
 
-    await populateImagesSignedUrls(createdImages);
+    const claimImages = await claimDao.createImagesV2(claim.id, userId, images);
+    console.log("created the images docs");
+
+    await populateImagesSignedUrls(claimImages);
+    console.log("populated the images");
 
     return res.status(201).json({
       claim,
       claimData,
-      claimImages: createdImages,
+      claimImages,
     });
   } catch (e) {
     passToExpressErrorHandler(e, next);
@@ -102,7 +125,7 @@ export const claimGetById = async (req: Request, res: Response, next: NextFuncti
   }
 };
 
-export const getAllClaims = async (req: Request, res: Response, next: NextFunction) => {
+export const getAllClaims = async (_req: Request, res: Response, next: NextFunction) => {
   try {
     const claims = await prisma.claim.findMany();
     const claimsData = [];
